// 2.55 Change Log
// Updated 6th June, 2020

//Alpha 74

Added a ZQE hotkey for '?' that opens the version info display.
	( ZoriaRPG, 13th June, 2020 )
	
Add raft speed modifiers for faster/slower moving raft
	Negative values slow the raft by (2^-n)
	Positive values cause the raft to move at (2^n)
	Value of 0 stops all movement on the raft
	Valid values: -7 to 5 (where -7 is approx. 1 pixel every 2 seconds,
		and 5 is 1 full tile every frame)
	( Venrob, 11th June, 2020 )

Implemented a request from ShadowTiger, whereby when you edit a
	DMap, and select a map tile, when you go to edit further
	DMap map tiles within the same session, the DMap editor will
	remember the last tile that you used. 
	This will clear on loading any quest, but it remains static
	while working on a quest in memory, updating each time that
	the user selects a different tile in this editor. 
	( ZoriaRPG, 11th June, 2020 )
	
Added the following configs to ZQuest:

	PreFillTileEditorPage = (0|1)
	If set to 1, the page field of the Goto Page dialogue in 
		the Tile Editor will be populated with the current page.
	If set to 0, the page field of the Goto Page dialogue in 
		the Tile Editor will be populated '0', as was always
		the case in the past.
	If unset, the default value for this config is '0'.
	
	PreFillComboEditorPage = (0|1)
	If set to 1, the page field of the Goto Page dialogue in 
		the Combo Page Editor will be populated with the current page,
		as was always the case in the past..
	If set to 0, the page field of the Goto Page dialogue in 
		the Combo Page Editor will be populated '0', like the prior 
		behaviour of the Tile Editor's Goto Page function.
	If unset, the default value for this config is '0'.
	
	PreFillMapTilePage = (0|1)
	Reserved for a feature request regarding the DMap Editor, when setting
		Map Tile values for DMaps.
		The desired outcome is that, if set to '1', that the DMap editor will
		memorise the last used tile page when selecting Map Tiles.